[package]
name = "facade-example"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"] }
env_logger = "0.6.2"
failure = "0.1.5"
facade = { git = "ssh://git@github.com/DenisKolodin/facade", features = ["refresh"] }
log = "0.4.8"
naive = "0.1.1"
runtime = "0.3.0-alpha.6"
runtime-tokio = "0.3.0-alpha.5"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tokio-tungstenite = "0.9.0"
tungstenite = "0.9.1"
url = "2.1.0"
url_serde = "0.2.0"

[dependencies.futures-legacy]
package = "futures"
version = "0.1.28"

[dependencies.futures]
package = "futures-preview"
version = "=0.3.0-alpha.17"
features = ["async-await", "nightly", "compat"]
